--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -89,7 +89,7 @@ phone = "标记电话"
 
 # Address
 # For country_code, use the 2-letter ISO code (see https://en.wikipedia.org/wiki/ISO_3166-1_alpha-2 )
-address = {street = "450 Serra Mall", city = "Stanford", region = "CA", postcode = "94305", country = "United States", country_code = "US"}
+address = {street = "杭州市西湖区", city = "浙江工业大学", region = "屏峰校区", postcode = "", country = "China", country_code = ""}
 
 # Geographic coordinates
 # To get your coordinates, right-click on Google Maps and choose "What's here?". The coords will show up at the bottom.
