--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -89,6 +89,6 @@ disableAliases = true  # Disable aliases when `redirects` is added to the `outpu
 # Install Wowchemy
 [module]
   [[module.imports]]
-    path = "github.com/wowchemy/wowchemy-hugo-modules/wowchemy-cms"
+    path = ""
   [[module.imports]]
-    path = "github.com/wowchemy/wowchemy-hugo-modules/wowchemy"
+    path = ""
