--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -74,7 +74,7 @@ diagram = false
 privacy_pack = false
 
 # Show related content at the bottom of pages?
-show_related = {post = true, project = true, publication = true, talk = true}
+show_related = {post = false, project = false, publication = false, talk = false}
 
 ############################
 ## Contact details
