--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -74,7 +74,7 @@ diagram = false
 privacy_pack = false
 
 # Show related content at the bottom of pages?
-show_related = {post = false, project = false, publication = false, talk = false}
+show_related = {post =true, project =true, publication =true, talk =true}
 
 ############################
 ## Contact details
@@ -150,7 +150,7 @@ sharing = true
 
 # Show a copyright license from creativecommons.org in the site footer?
 # Page specific copyright licenses are also possible by adding this option to a page's front matter.
-copyright_license = {enable = false, allow_derivatives = false, share_alike = true, allow_commercial = false, notice = "This work is licensed under {license}"}
+copyright_license = {enable = false, allow_derivatives = false, share_alike = false, allow_commercial = false, notice = "This work is licensed under {license}"}
 
 # Load JS plugins
 #   E.g. To load `/assets/js/custom.js`, set `plugins_js = ["custom"]`.
