--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -7,12 +7,14 @@
 #  name = "Home"
 #  url = "/"
 #  weight = 10
-
 [[main]]
   name = "News"
   url = "post"
   weight = 20
-
+[[main]]
+  name = "Research"
+  url = "research"
+  weight = 20
 [[main]]
   name = "People"
   url = "people"
